Menu bar rendering problem on Firefox had been fixed.

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -10,7 +10,7 @@
 
 #nav {
 	z-index:1000;
-	margin:3px 0 0px 0;
+	margin:3px 0 5px 0;
 	height:37px;
 	padding: 0 6px 0 6px;
 	line-height: 100%;
